[package]
authors = ["Eric Trombly <etrombly@yahoo.com>"]
edition = "2018"
readme = "README.md"
name = "black-board-blink"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
cortex-m-rtfm = "0.4.2"

[dependencies.stm32f4]
version = "0.6.0"
features = ["stm32f407", "rt"]

[dependencies.stm32f4xx-hal]
version = "0.3.0"
features = ["stm32f407"]

[dependencies.max7219]
git = "https://github.com/etrombly/max7219"

# this lets you use `cargo fix`!
[[bin]]
name = "black-board-blink"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
